import getGroupAttributes from '../getGroupAttributes';

const attributes = {
	_ecn: '',
	_al: '',
	_cl: 'Button',
	_fw: 'normal',
	_bc: '',
	'_a-general': 'center',
	'_ps-general': true,
	'_pc-general': 4,
	'_fs.u-general': 'px',
	'_lhe.u-general': '%',
	'_lhe-general': '100',
	'_ls.u-general': 'px',
	't.sh': false,
	'_ps-general.h': true,
	'_pc-general.h': 5,
	'b_am-general': '',
	'bc_ps-general': true,
	'bc_pc-general': 4,
	'bg_o-general': 1,
	'bc_ps-general.h': true,
	'bc_pc-general.h': 6,
	'bo_ps-general': true,
	'bo_pc-general': 5,
	'bo_w.sy-general': true,
	'bo_w.u-general': 'px',
	'bo.ra.tl-general': 10,
	'bo.ra.tr-general': 10,
	'bo.ra.br-general': 10,
	'bo.ra.bl-general': 10,
	'bo.ra.sy-general': true,
	'bo.ra.u-general': 'px',
	i_i: true,
	i_c: '<svg class="twitter-line-maxi-svg" width="64px" height="64px" viewBox="0 0 24 24"><path d="M21.856 5.888c-.733.322-1.514.535-2.328.638a4.02 4.02 0 0 0 1.778-2.234c-.781.466-1.643.795-2.563.978a4.05 4.05 0 0 0-2.952-1.279 4.04 4.04 0 0 0-4.038 4.042c0 .32.027.628.094.922-3.36-.164-6.332-1.774-8.329-4.227-.349.605-.553 1.297-.553 2.043 0 1.399.721 2.64 1.795 3.358a3.99 3.99 0 0 1-1.826-.498v.044a4.06 4.06 0 0 0 3.238 3.971c-.329.09-.687.133-1.059.133-.259 0-.52-.015-.765-.069a4.08 4.08 0 0 0 3.776 2.815 8.12 8.12 0 0 1-5.01 1.724 7.58 7.58 0 0 1-.967-.055c1.79 1.154 3.912 1.814 6.199 1.814 7.436 0 11.502-6.16 11.502-11.499a10.34 10.34 0 0 0-.015-.522c.802-.569 1.476-1.28 2.026-2.098z" fill="none" data-stroke="" stroke="var(--maxi-light-color,rgba(var(--maxi-light-color-4), 1))" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="10"></path></svg>',
	i_o: true,
	i_pos: 'left',
	'i_w-general': 23,
	'i_w.u-general': 'px',
	'i_spa-general': 0,
	'i-str-general': 1.5,
	i_ps: true,
	i_pc: 4,
	'i_p.sy-general': true,
	'i_p.sy-horizontal-general': false,
	'i_p.sy-vertical-general': false,
	'i_p.u-general': 'px',
	'i-bo-_ps-general': true,
	'i-bo-_pc-general': 4,
	'i-bo.ra.u-general': '%',
	'i.sh': true,
	'i_i.h': true,
	'i_c.h': '',
	'i_o.h': false,
	'i_pos.h': 'right',
	'i_w-general.h': '',
	'i_w.u-general.h': 'px',
	'i_spa-general.h': 5,
	'i-str-general.h': '',
	'i_ps.h': true,
	'i_pc.h': 6,
	'i-bc_ps.h': true,
	'i-bc_pc.h': 4,
	'i-bg_o.h': 1,
	'i-bo_ps-general.h': true,
	'i-bo_pc-general.h': 6,
	'i-bo.ra.u-general.h': 'px',
	'bo.sh': true,
	'bo_ps-general.h': true,
	'bo_pc-general.h': 3,
	'bo.ra.u-general.h': 'px',
	_sao: false,
	'_mw.u-general': 'px',
	'_w.u-general': 'px',
	'_miw.u-general': 'px',
	'_mh.u-general': 'px',
	'_h.u-general': 'px',
	'_mih.u-general': 'px',
	'bs_ps-general': false,
	'bs_pc-general': 8,
	'bs.sh': false,
	'bs_ps-general.h': true,
	'bs_pc-general.h': 6,
	'_m.sy-general': false,
	'_m.sy-horizontal-general': false,
	'_m.sy-vertical-general': false,
	'_m.u-general': 'px',
	'_p.t-general': 0,
	'_p.r-general': 0,
	'_p.b-general': 0,
	'_p.l-general': 0,
	'_p.sy-general': true,
	'_p.u-general': 'px',
	'_p.t-xxl': 23,
	'_p.r-xxl': 55,
	'_p.b-xxl': 23,
	'_p.l-xxl': 55,
	'_pos.sy-general': false,
	'_pos.u-general': 'px',
	'tr_tr-x.u-general': '%',
	'tr_tr-y.u-general': '%',
	'tr_ori-x.u-general': '%',
	'tr_ori-y.u-general': '%',
	_uid: 'button-maxi-1',
	_ioh: true,
	_bs: 'maxi-light',
	'bo_s-general': 'solid',
	'i-bc_pc-general': 1,
	'i-bc_ps-general': true,
	'i-bo.ra.bl-general': 100,
	'i-bo.ra.b.r-general': 100,
	'i-bo_w.b-general': 2,
	'i-bo_w.l-general': 2,
	'i-bo_w.r-general': 2,
	'i-bo_s-general': 'solid',
	'i-bo.ra.sy-general': true,
	'i-bo_w.sy-general': true,
	'i-bo.ra.tl-general': 100,
	'i-bo.ra.tr-general': 100,
	'i-bo_w.t-general': 2,
	'i-bo_w.u-general': 'px',
	'i_p.b-general': 5,
	'i_p.l-general': 5,
	'i_p.r-general': 5,
	'i_p.t-general': 5,
	'i_w-xxl': 35,
	'i-bo.ra.bl-xxl': 100,
	'i-bo.ra.b.r-xxl': 100,
	'i-bo.ra.tl-xxl': 100,
	'i-bo.ra.tr-xxl': 100,
	'i-bo.ra.u-xxl': '%',
	'i_p.b-xxl': 7,
	'i_p.l-xxl': 7,
	'i_p.r-xxl': 7,
	'i_p.t-xxl': 7,
	'i_p.sy-xxl': true,
	'i-str-xxl': 1.3,
	'b_am-general.h': 'none',
	'_ps.h': false,
	'i-bo_s-general.h': 'solid',
	'i-bc_ps-general.h': false,
	'bo_w.t-general': 2,
	'bo_w.r-general': 2,
	'bo_w.b-general': 2,
	'bo_w.l-general': 2,
	'bo_s-general.h': 'dashed',
	'bo_w.t-general.h': 20,
	'bo_w.r-general.h': 20,
	'bo_w.b-general.h': 20,
	'bo_w.l-general.h': 20,
	'bo_w.sy-general.h': true,
	'bo_w.u-general.h': 'px',
	'bo.ra.tl-general.h': 100,
	'bo.ra.tr-general.h': 100,
	'bo.ra.b.r-general.h': 100,
	'bo.ra.bl-general.h': 100,
	'bo.ra.sy-general.h': true,
	'bo_po-general.h': 40,
};

describe('getGroupAttributes', () => {
	it('Return basic attributes from string', () => {
		expect(getGroupAttributes(attributes, 'border')).toMatchSnapshot();
	});

	it('Return basic attributes from array', () => {
		expect(
			getGroupAttributes(attributes, [
				'border',
				'borderWidth',
				'borderRadius',
			])
		).toMatchSnapshot();
	});

	it('Return basic attributes from string with hover', () => {
		expect(
			getGroupAttributes(attributes, 'border', true)
		).toMatchSnapshot();
	});

	it('Return basic attributes from array with hover', () => {
		expect(
			getGroupAttributes(
				attributes,
				['border', 'borderWidth', 'borderRadius'],
				true
			)
		).toMatchSnapshot();
	});

	it('Return basic attributes from string with prefix', () => {
		expect(
			getGroupAttributes(attributes, 'border', false, 'i-')
		).toMatchSnapshot();
	});
});
