// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGroupAttributes Return basic attributes from array 1`] = `
Object {
  "bo.ra.bl-general": 10,
  "bo.ra.bl-l": undefined,
  "bo.ra.bl-m": undefined,
  "bo.ra.bl-s": undefined,
  "bo.ra.bl-xl": undefined,
  "bo.ra.bl-xs": undefined,
  "bo.ra.bl-xxl": undefined,
  "bo.ra.br-general": 10,
  "bo.ra.br-l": undefined,
  "bo.ra.br-m": undefined,
  "bo.ra.br-s": undefined,
  "bo.ra.br-xl": undefined,
  "bo.ra.br-xs": undefined,
  "bo.ra.br-xxl": undefined,
  "bo.ra.sy-general": true,
  "bo.ra.sy-l": undefined,
  "bo.ra.sy-m": undefined,
  "bo.ra.sy-s": undefined,
  "bo.ra.sy-xl": undefined,
  "bo.ra.sy-xs": undefined,
  "bo.ra.sy-xxl": undefined,
  "bo.ra.tl-general": 10,
  "bo.ra.tl-l": undefined,
  "bo.ra.tl-m": undefined,
  "bo.ra.tl-s": undefined,
  "bo.ra.tl-xl": undefined,
  "bo.ra.tl-xs": undefined,
  "bo.ra.tl-xxl": undefined,
  "bo.ra.tr-general": 10,
  "bo.ra.tr-l": undefined,
  "bo.ra.tr-m": undefined,
  "bo.ra.tr-s": undefined,
  "bo.ra.tr-xl": undefined,
  "bo.ra.tr-xs": undefined,
  "bo.ra.tr-xxl": undefined,
  "bo.ra.u-general": "px",
  "bo.ra.u-l": undefined,
  "bo.ra.u-m": undefined,
  "bo.ra.u-s": undefined,
  "bo.ra.u-xl": undefined,
  "bo.ra.u-xs": undefined,
  "bo.ra.u-xxl": undefined,
  "bo_cc-general": undefined,
  "bo_cc-l": undefined,
  "bo_cc-m": undefined,
  "bo_cc-s": undefined,
  "bo_cc-xl": undefined,
  "bo_cc-xs": undefined,
  "bo_cc-xxl": undefined,
  "bo_pc-general": 5,
  "bo_pc-l": undefined,
  "bo_pc-m": undefined,
  "bo_pc-s": undefined,
  "bo_pc-xl": undefined,
  "bo_pc-xs": undefined,
  "bo_pc-xxl": undefined,
  "bo_po-general": undefined,
  "bo_po-l": undefined,
  "bo_po-m": undefined,
  "bo_po-s": undefined,
  "bo_po-xl": undefined,
  "bo_po-xs": undefined,
  "bo_po-xxl": undefined,
  "bo_ps-general": true,
  "bo_ps-l": undefined,
  "bo_ps-m": undefined,
  "bo_ps-s": undefined,
  "bo_ps-xl": undefined,
  "bo_ps-xs": undefined,
  "bo_ps-xxl": undefined,
  "bo_s-general": "solid",
  "bo_s-l": undefined,
  "bo_s-m": undefined,
  "bo_s-s": undefined,
  "bo_s-xl": undefined,
  "bo_s-xs": undefined,
  "bo_s-xxl": undefined,
  "bo_w.b-general": 2,
  "bo_w.b-l": undefined,
  "bo_w.b-m": undefined,
  "bo_w.b-s": undefined,
  "bo_w.b-xl": undefined,
  "bo_w.b-xs": undefined,
  "bo_w.b-xxl": undefined,
  "bo_w.l-general": 2,
  "bo_w.l-l": undefined,
  "bo_w.l-m": undefined,
  "bo_w.l-s": undefined,
  "bo_w.l-xl": undefined,
  "bo_w.l-xs": undefined,
  "bo_w.l-xxl": undefined,
  "bo_w.r-general": 2,
  "bo_w.r-l": undefined,
  "bo_w.r-m": undefined,
  "bo_w.r-s": undefined,
  "bo_w.r-xl": undefined,
  "bo_w.r-xs": undefined,
  "bo_w.r-xxl": undefined,
  "bo_w.sy-general": true,
  "bo_w.sy-l": undefined,
  "bo_w.sy-m": undefined,
  "bo_w.sy-s": undefined,
  "bo_w.sy-xl": undefined,
  "bo_w.sy-xs": undefined,
  "bo_w.sy-xxl": undefined,
  "bo_w.t-general": 2,
  "bo_w.t-l": undefined,
  "bo_w.t-m": undefined,
  "bo_w.t-s": undefined,
  "bo_w.t-xl": undefined,
  "bo_w.t-xs": undefined,
  "bo_w.t-xxl": undefined,
  "bo_w.u-general": "px",
  "bo_w.u-l": undefined,
  "bo_w.u-m": undefined,
  "bo_w.u-s": undefined,
  "bo_w.u-xl": undefined,
  "bo_w.u-xs": undefined,
  "bo_w.u-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from array with hover 1`] = `
Object {
  "bo.ra.bl-general": 10,
  "bo.ra.bl-general.h": 100,
  "bo.ra.bl-l": undefined,
  "bo.ra.bl-l.h": undefined,
  "bo.ra.bl-m": undefined,
  "bo.ra.bl-m.h": undefined,
  "bo.ra.bl-s": undefined,
  "bo.ra.bl-s.h": undefined,
  "bo.ra.bl-xl": undefined,
  "bo.ra.bl-xl.h": undefined,
  "bo.ra.bl-xs": undefined,
  "bo.ra.bl-xs.h": undefined,
  "bo.ra.bl-xxl": undefined,
  "bo.ra.bl-xxl.h": undefined,
  "bo.ra.br-general": 10,
  "bo.ra.br-general.h": undefined,
  "bo.ra.br-l": undefined,
  "bo.ra.br-l.h": undefined,
  "bo.ra.br-m": undefined,
  "bo.ra.br-m.h": undefined,
  "bo.ra.br-s": undefined,
  "bo.ra.br-s.h": undefined,
  "bo.ra.br-xl": undefined,
  "bo.ra.br-xl.h": undefined,
  "bo.ra.br-xs": undefined,
  "bo.ra.br-xs.h": undefined,
  "bo.ra.br-xxl": undefined,
  "bo.ra.br-xxl.h": undefined,
  "bo.ra.sy-general": true,
  "bo.ra.sy-general.h": true,
  "bo.ra.sy-l": undefined,
  "bo.ra.sy-l.h": undefined,
  "bo.ra.sy-m": undefined,
  "bo.ra.sy-m.h": undefined,
  "bo.ra.sy-s": undefined,
  "bo.ra.sy-s.h": undefined,
  "bo.ra.sy-xl": undefined,
  "bo.ra.sy-xl.h": undefined,
  "bo.ra.sy-xs": undefined,
  "bo.ra.sy-xs.h": undefined,
  "bo.ra.sy-xxl": undefined,
  "bo.ra.sy-xxl.h": undefined,
  "bo.ra.tl-general": 10,
  "bo.ra.tl-general.h": 100,
  "bo.ra.tl-l": undefined,
  "bo.ra.tl-l.h": undefined,
  "bo.ra.tl-m": undefined,
  "bo.ra.tl-m.h": undefined,
  "bo.ra.tl-s": undefined,
  "bo.ra.tl-s.h": undefined,
  "bo.ra.tl-xl": undefined,
  "bo.ra.tl-xl.h": undefined,
  "bo.ra.tl-xs": undefined,
  "bo.ra.tl-xs.h": undefined,
  "bo.ra.tl-xxl": undefined,
  "bo.ra.tl-xxl.h": undefined,
  "bo.ra.tr-general": 10,
  "bo.ra.tr-general.h": 100,
  "bo.ra.tr-l": undefined,
  "bo.ra.tr-l.h": undefined,
  "bo.ra.tr-m": undefined,
  "bo.ra.tr-m.h": undefined,
  "bo.ra.tr-s": undefined,
  "bo.ra.tr-s.h": undefined,
  "bo.ra.tr-xl": undefined,
  "bo.ra.tr-xl.h": undefined,
  "bo.ra.tr-xs": undefined,
  "bo.ra.tr-xs.h": undefined,
  "bo.ra.tr-xxl": undefined,
  "bo.ra.tr-xxl.h": undefined,
  "bo.ra.u-general": "px",
  "bo.ra.u-general.h": "px",
  "bo.ra.u-l": undefined,
  "bo.ra.u-l.h": undefined,
  "bo.ra.u-m": undefined,
  "bo.ra.u-m.h": undefined,
  "bo.ra.u-s": undefined,
  "bo.ra.u-s.h": undefined,
  "bo.ra.u-xl": undefined,
  "bo.ra.u-xl.h": undefined,
  "bo.ra.u-xs": undefined,
  "bo.ra.u-xs.h": undefined,
  "bo.ra.u-xxl": undefined,
  "bo.ra.u-xxl.h": undefined,
  "bo.sh": true,
  "bo_cc-general": undefined,
  "bo_cc-general.h": undefined,
  "bo_cc-l": undefined,
  "bo_cc-l.h": undefined,
  "bo_cc-m": undefined,
  "bo_cc-m.h": undefined,
  "bo_cc-s": undefined,
  "bo_cc-s.h": undefined,
  "bo_cc-xl": undefined,
  "bo_cc-xl.h": undefined,
  "bo_cc-xs": undefined,
  "bo_cc-xs.h": undefined,
  "bo_cc-xxl": undefined,
  "bo_cc-xxl.h": undefined,
  "bo_pc-general": 5,
  "bo_pc-general.h": 3,
  "bo_pc-l": undefined,
  "bo_pc-l.h": undefined,
  "bo_pc-m": undefined,
  "bo_pc-m.h": undefined,
  "bo_pc-s": undefined,
  "bo_pc-s.h": undefined,
  "bo_pc-xl": undefined,
  "bo_pc-xl.h": undefined,
  "bo_pc-xs": undefined,
  "bo_pc-xs.h": undefined,
  "bo_pc-xxl": undefined,
  "bo_pc-xxl.h": undefined,
  "bo_po-general": undefined,
  "bo_po-general.h": 40,
  "bo_po-l": undefined,
  "bo_po-l.h": undefined,
  "bo_po-m": undefined,
  "bo_po-m.h": undefined,
  "bo_po-s": undefined,
  "bo_po-s.h": undefined,
  "bo_po-xl": undefined,
  "bo_po-xl.h": undefined,
  "bo_po-xs": undefined,
  "bo_po-xs.h": undefined,
  "bo_po-xxl": undefined,
  "bo_po-xxl.h": undefined,
  "bo_ps-general": true,
  "bo_ps-general.h": true,
  "bo_ps-l": undefined,
  "bo_ps-l.h": undefined,
  "bo_ps-m": undefined,
  "bo_ps-m.h": undefined,
  "bo_ps-s": undefined,
  "bo_ps-s.h": undefined,
  "bo_ps-xl": undefined,
  "bo_ps-xl.h": undefined,
  "bo_ps-xs": undefined,
  "bo_ps-xs.h": undefined,
  "bo_ps-xxl": undefined,
  "bo_ps-xxl.h": undefined,
  "bo_s-general": "solid",
  "bo_s-general.h": "dashed",
  "bo_s-l": undefined,
  "bo_s-l.h": undefined,
  "bo_s-m": undefined,
  "bo_s-m.h": undefined,
  "bo_s-s": undefined,
  "bo_s-s.h": undefined,
  "bo_s-xl": undefined,
  "bo_s-xl.h": undefined,
  "bo_s-xs": undefined,
  "bo_s-xs.h": undefined,
  "bo_s-xxl": undefined,
  "bo_s-xxl.h": undefined,
  "bo_w.b-general": 2,
  "bo_w.b-general.h": 20,
  "bo_w.b-l": undefined,
  "bo_w.b-l.h": undefined,
  "bo_w.b-m": undefined,
  "bo_w.b-m.h": undefined,
  "bo_w.b-s": undefined,
  "bo_w.b-s.h": undefined,
  "bo_w.b-xl": undefined,
  "bo_w.b-xl.h": undefined,
  "bo_w.b-xs": undefined,
  "bo_w.b-xs.h": undefined,
  "bo_w.b-xxl": undefined,
  "bo_w.b-xxl.h": undefined,
  "bo_w.l-general": 2,
  "bo_w.l-general.h": 20,
  "bo_w.l-l": undefined,
  "bo_w.l-l.h": undefined,
  "bo_w.l-m": undefined,
  "bo_w.l-m.h": undefined,
  "bo_w.l-s": undefined,
  "bo_w.l-s.h": undefined,
  "bo_w.l-xl": undefined,
  "bo_w.l-xl.h": undefined,
  "bo_w.l-xs": undefined,
  "bo_w.l-xs.h": undefined,
  "bo_w.l-xxl": undefined,
  "bo_w.l-xxl.h": undefined,
  "bo_w.r-general": 2,
  "bo_w.r-general.h": 20,
  "bo_w.r-l": undefined,
  "bo_w.r-l.h": undefined,
  "bo_w.r-m": undefined,
  "bo_w.r-m.h": undefined,
  "bo_w.r-s": undefined,
  "bo_w.r-s.h": undefined,
  "bo_w.r-xl": undefined,
  "bo_w.r-xl.h": undefined,
  "bo_w.r-xs": undefined,
  "bo_w.r-xs.h": undefined,
  "bo_w.r-xxl": undefined,
  "bo_w.r-xxl.h": undefined,
  "bo_w.sy-general": true,
  "bo_w.sy-general.h": true,
  "bo_w.sy-l": undefined,
  "bo_w.sy-l.h": undefined,
  "bo_w.sy-m": undefined,
  "bo_w.sy-m.h": undefined,
  "bo_w.sy-s": undefined,
  "bo_w.sy-s.h": undefined,
  "bo_w.sy-xl": undefined,
  "bo_w.sy-xl.h": undefined,
  "bo_w.sy-xs": undefined,
  "bo_w.sy-xs.h": undefined,
  "bo_w.sy-xxl": undefined,
  "bo_w.sy-xxl.h": undefined,
  "bo_w.t-general": 2,
  "bo_w.t-general.h": 20,
  "bo_w.t-l": undefined,
  "bo_w.t-l.h": undefined,
  "bo_w.t-m": undefined,
  "bo_w.t-m.h": undefined,
  "bo_w.t-s": undefined,
  "bo_w.t-s.h": undefined,
  "bo_w.t-xl": undefined,
  "bo_w.t-xl.h": undefined,
  "bo_w.t-xs": undefined,
  "bo_w.t-xs.h": undefined,
  "bo_w.t-xxl": undefined,
  "bo_w.t-xxl.h": undefined,
  "bo_w.u-general": "px",
  "bo_w.u-general.h": "px",
  "bo_w.u-l": undefined,
  "bo_w.u-l.h": undefined,
  "bo_w.u-m": undefined,
  "bo_w.u-m.h": undefined,
  "bo_w.u-s": undefined,
  "bo_w.u-s.h": undefined,
  "bo_w.u-xl": undefined,
  "bo_w.u-xl.h": undefined,
  "bo_w.u-xs": undefined,
  "bo_w.u-xs.h": undefined,
  "bo_w.u-xxl": undefined,
  "bo_w.u-xxl.h": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string 1`] = `
Object {
  "bo_cc-general": undefined,
  "bo_cc-l": undefined,
  "bo_cc-m": undefined,
  "bo_cc-s": undefined,
  "bo_cc-xl": undefined,
  "bo_cc-xs": undefined,
  "bo_cc-xxl": undefined,
  "bo_pc-general": 5,
  "bo_pc-l": undefined,
  "bo_pc-m": undefined,
  "bo_pc-s": undefined,
  "bo_pc-xl": undefined,
  "bo_pc-xs": undefined,
  "bo_pc-xxl": undefined,
  "bo_po-general": undefined,
  "bo_po-l": undefined,
  "bo_po-m": undefined,
  "bo_po-s": undefined,
  "bo_po-xl": undefined,
  "bo_po-xs": undefined,
  "bo_po-xxl": undefined,
  "bo_ps-general": true,
  "bo_ps-l": undefined,
  "bo_ps-m": undefined,
  "bo_ps-s": undefined,
  "bo_ps-xl": undefined,
  "bo_ps-xs": undefined,
  "bo_ps-xxl": undefined,
  "bo_s-general": "solid",
  "bo_s-l": undefined,
  "bo_s-m": undefined,
  "bo_s-s": undefined,
  "bo_s-xl": undefined,
  "bo_s-xs": undefined,
  "bo_s-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with hover 1`] = `
Object {
  "bo.sh": true,
  "bo_cc-general": undefined,
  "bo_cc-general.h": undefined,
  "bo_cc-l": undefined,
  "bo_cc-l.h": undefined,
  "bo_cc-m": undefined,
  "bo_cc-m.h": undefined,
  "bo_cc-s": undefined,
  "bo_cc-s.h": undefined,
  "bo_cc-xl": undefined,
  "bo_cc-xl.h": undefined,
  "bo_cc-xs": undefined,
  "bo_cc-xs.h": undefined,
  "bo_cc-xxl": undefined,
  "bo_cc-xxl.h": undefined,
  "bo_pc-general": 5,
  "bo_pc-general.h": 3,
  "bo_pc-l": undefined,
  "bo_pc-l.h": undefined,
  "bo_pc-m": undefined,
  "bo_pc-m.h": undefined,
  "bo_pc-s": undefined,
  "bo_pc-s.h": undefined,
  "bo_pc-xl": undefined,
  "bo_pc-xl.h": undefined,
  "bo_pc-xs": undefined,
  "bo_pc-xs.h": undefined,
  "bo_pc-xxl": undefined,
  "bo_pc-xxl.h": undefined,
  "bo_po-general": undefined,
  "bo_po-general.h": 40,
  "bo_po-l": undefined,
  "bo_po-l.h": undefined,
  "bo_po-m": undefined,
  "bo_po-m.h": undefined,
  "bo_po-s": undefined,
  "bo_po-s.h": undefined,
  "bo_po-xl": undefined,
  "bo_po-xl.h": undefined,
  "bo_po-xs": undefined,
  "bo_po-xs.h": undefined,
  "bo_po-xxl": undefined,
  "bo_po-xxl.h": undefined,
  "bo_ps-general": true,
  "bo_ps-general.h": true,
  "bo_ps-l": undefined,
  "bo_ps-l.h": undefined,
  "bo_ps-m": undefined,
  "bo_ps-m.h": undefined,
  "bo_ps-s": undefined,
  "bo_ps-s.h": undefined,
  "bo_ps-xl": undefined,
  "bo_ps-xl.h": undefined,
  "bo_ps-xs": undefined,
  "bo_ps-xs.h": undefined,
  "bo_ps-xxl": undefined,
  "bo_ps-xxl.h": undefined,
  "bo_s-general": "solid",
  "bo_s-general.h": "dashed",
  "bo_s-l": undefined,
  "bo_s-l.h": undefined,
  "bo_s-m": undefined,
  "bo_s-m.h": undefined,
  "bo_s-s": undefined,
  "bo_s-s.h": undefined,
  "bo_s-xl": undefined,
  "bo_s-xl.h": undefined,
  "bo_s-xs": undefined,
  "bo_s-xs.h": undefined,
  "bo_s-xxl": undefined,
  "bo_s-xxl.h": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with prefix 1`] = `
Object {
  "i-bo_cc-general": undefined,
  "i-bo_cc-l": undefined,
  "i-bo_cc-m": undefined,
  "i-bo_cc-s": undefined,
  "i-bo_cc-xl": undefined,
  "i-bo_cc-xs": undefined,
  "i-bo_cc-xxl": undefined,
  "i-bo_pc-general": undefined,
  "i-bo_pc-l": undefined,
  "i-bo_pc-m": undefined,
  "i-bo_pc-s": undefined,
  "i-bo_pc-xl": undefined,
  "i-bo_pc-xs": undefined,
  "i-bo_pc-xxl": undefined,
  "i-bo_po-general": undefined,
  "i-bo_po-l": undefined,
  "i-bo_po-m": undefined,
  "i-bo_po-s": undefined,
  "i-bo_po-xl": undefined,
  "i-bo_po-xs": undefined,
  "i-bo_po-xxl": undefined,
  "i-bo_ps-general": undefined,
  "i-bo_ps-l": undefined,
  "i-bo_ps-m": undefined,
  "i-bo_ps-s": undefined,
  "i-bo_ps-xl": undefined,
  "i-bo_ps-xs": undefined,
  "i-bo_ps-xxl": undefined,
  "i-bo_s-general": "solid",
  "i-bo_s-l": undefined,
  "i-bo_s-m": undefined,
  "i-bo_s-s": undefined,
  "i-bo_s-xl": undefined,
  "i-bo_s-xs": undefined,
  "i-bo_s-xxl": undefined,
}
`;
